logs/libpolarbytebot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy_Utils-0.32.21.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libpolarbytebot'...
Listing './lib/python3.5/site-packages/libpolarbytebot/eastereggs'...
Compiling './lib/python3.5/site-packages/libpolarbytebot/models.py'...
***   File "./lib/python3.5/site-packages/libpolarbytebot/models.py", line 148
    engine = sqlalchemy.create_engine(f"{system}://{username}:{password}@{host}/{database}")
                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpolarbytebot/polarbytebot.py'...
***   File "./lib/python3.5/site-packages/libpolarbytebot/polarbytebot.py", line 263
    return f'https://reddit.com{slug}'
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libpolarbytebot/tracker'...
Listing './lib/python3.5/site-packages/libpolarbytebot/tracker/formats'...
Compiling './lib/python3.5/site-packages/libpolarbytebot/tracker/formats/guildwars2_format.py'...
***   File "./lib/python3.5/site-packages/libpolarbytebot/tracker/formats/guildwars2_format.py", line 24
    return f'{self.permalink}?context={self._context}'
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libpolarbytebot/transcriber'...
Listing './lib/python3.5/site-packages/libpolarbytebot/transcriber/formats'...
Compiling './lib/python3.5/site-packages/libpolarbytebot/transcriber/formats/guildwars2_format.py'...
***   File "./lib/python3.5/site-packages/libpolarbytebot/transcriber/formats/guildwars2_format.py", line 29
    return f'[BLOG] [{self.author} posted on {self.timestamp}]({self.url}):\n {self.text} '
                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpolarbytebot/transcriber/formats/overwatch_format.py'...
***   File "./lib/python3.5/site-packages/libpolarbytebot/transcriber/formats/overwatch_format.py", line 25
    return f'{self.no_referenced_results}\n\n---\n\nReferenced Postings:\n\n{self.all_referenced_results}'
                                                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libpolarbytebot/transcriber/markdown'...
Listing './lib/python3.5/site-packages/libpolarbytebot-0.7.14.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/praw'...
Listing './lib/python3.5/site-packages/praw/models'...
Listing './lib/python3.5/site-packages/praw/models/list'...
Listing './lib/python3.5/site-packages/praw/models/listing'...
Listing './lib/python3.5/site-packages/praw/models/listing/mixins'...
Listing './lib/python3.5/site-packages/praw/models/reddit'...
Listing './lib/python3.5/site-packages/praw/models/reddit/mixins'...
Listing './lib/python3.5/site-packages/praw-5.3.0.dist-info'...
Listing './lib/python3.5/site-packages/prawcore'...
Listing './lib/python3.5/site-packages/prawcore-0.13.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/functions'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/primitives'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/relationships'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/types'...
Listing './lib/python3.5/site-packages/update_checker-0.16.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
